--- a/terasoluna-gfw-common-libraries/pom.xml
+++ b/terasoluna-gfw-common-libraries/pom.xml
@@ -79,7 +79,8 @@
           <configuration>
             <header>${project.root.basedir}/../license/header.txt</header>
             <includes>
-              <include>src/**/*.java</include>
+              <include>src/main/java/**/*.java</include>
+              <include>src/test/java/**/*.java</include>
             </includes>
             <encoding>${encoding}</encoding>
             <headerDefinitions>
