Applyed Java code format check #680

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ cache:
 install: true
 
 script:
+  - mvn formatter:validate -P common-libs
   - mvn -U clean install
   - mvn -U -P common-libs jacoco:report coveralls:report
