--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ cache:
 install: true
 
 script:
+  - mvn xml:check-format -P xml-check-format
   - mvn formatter:validate -P common-libs
   - mvn -U clean install
   - mvn -U -P common-libs jacoco:report coveralls:report
