--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <!-- == Maven Plugin Versions == -->
         <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
         <formatter-maven-plugin.version>2.0.1</formatter-maven-plugin.version>
+        <xml-maven-plugin.version>1.0.1</xml-maven-plugin.version>
         <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
         <coveralls-maven-plugin.version>4.1.0</coveralls-maven-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
@@ -181,6 +182,38 @@
                                     <sourceDirectory>terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/src/main/java</sourceDirectory>
                                     <sourceDirectory>terasoluna-gfw-common-libraries/terasoluna-gfw-string/src/main/java</sourceDirectory>
                                 </sourceDirectories>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+        <profile>
+            <id>xml-check-format</id>
+            <modules>
+                <module>terasoluna-gfw-common-libraries</module>
+                <module>terasoluna-gfw-dependencies</module>
+            </modules>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>xml-maven-plugin</artifactId>
+                            <version>${xml-maven-plugin.version}</version>
+                            <configuration>
+                                <indentSize>2</indentSize>
+                                <formatFileSets>
+                                    <formatFileSet>
+                                        <directory>${project.basedir}</directory>
+                                        <includes>
+                                            <include>terasoluna-gfw-parent/**/*.xml</include>
+                                        </includes>
+                                        <excludes>
+                                            <exclude>**/target/**</exclude>
+                                        </excludes>
+                                    </formatFileSet>
+                                </formatFileSets>
                             </configuration>
                         </plugin>
                     </plugins>
