--- a/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0208/pom.xml
+++ b/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0208/pom.xml
@@ -53,7 +53,7 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>net.revelc.code</groupId>
+                <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
                 <configuration>
                     <configFile>${project.basedir}/../../../eclipse/formatter.xml
