--- a/terasoluna-gfw-string/pom.xml
+++ b/terasoluna-gfw-string/pom.xml
@@ -54,7 +54,7 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>net.revelc.code</groupId>
+                <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
