--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ cache:
 install: true
 
 script:
-  - if [[ $TRAVIS_JDK_VERSION != "openjdk6" ]]; then ./mvn-build-all.sh formatter:validate; fi
+  - if [[ $TRAVIS_JDK_VERSION != "openjdk6" ]]; then ./mvn-build-all.sh xml:check-format formatter:validate; fi
   - ./mvn-build-all.sh clean install jacoco:report
   - if [[ $TRAVIS_JDK_VERSION != "openjdk6" ]]; then mvn -U coveralls:report -f terasoluna-gfw-parent/pom.xml; fi
