change formatter-maven-plugin lineEnding CRLF -> LF #763
(cherry picked from commit 33aed2c47b8c39ba2bedb4c0b8816bbeb055b020)

--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,7 @@
               <configuration>
                 <configFile>${project.basedir}/eclipse/formatter.xml
                 </configFile>
-                <lineEnding>CRLF</lineEnding>
+                <lineEnding>LF</lineEnding>
                 <directories>
                   <directory>${project.basedir}</directory>
                 </directories>
