--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -108,7 +108,7 @@
           <configuration>
             <configFile>${project.basedir}/../eclipse/formatter.xml
             </configFile>
-            <lineEnding>CRLF</lineEnding>
+            <lineEnding>LF</lineEnding>
           </configuration>
         </plugin>
         <plugin>
