change formatter-maven-plugin lineEnding CRLF -> LF #763
(cherry picked from commit 281b2bf21bb388b7967cd7639ea87e8d96a488fa)

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -97,7 +97,7 @@
           <configuration>
             <configFile>${project.basedir}/../eclipse/formatter.xml
             </configFile>
-            <lineEnding>CRLF</lineEnding>
+            <lineEnding>LF</lineEnding>
           </configuration>
         </plugin>
         <plugin>
