change unit test to use code points for assertion of DefaultFullHalf definition #748
(cherry picked from commit 34e5fc9f624a71d1eae77eb039312b366a44bd88)

--- a/terasoluna-gfw-string/pom.xml
+++ b/terasoluna-gfw-string/pom.xml
@@ -59,6 +59,7 @@
         <configuration>
           <excludes>
             <exclude>org/terasoluna/gfw/common/fullhalf/DefaultFullHalf.java</exclude>
+            <exclude>org/terasoluna/gfw/common/fullhalf/DefaultFullHalfCodePointsMap.java</exclude>
           </excludes>
         </configuration>
       </plugin>
