Support JDK9 on Travis CI #773 Upgrade to maven plugins
* maven-surefire-plugin 2.20.1
* jacoco-maven-plugin 0.7.9
* maven-source-plugin 3.0.1
* maven-javadoc-plugin 3.0.0-M1

Override the java.version on maven-surefire-plugin.
Add coveralls skip=true because the coveralls 4.3.0 or previous version does not work on Java 9.
Add oraclejdk9 in .travis.yml.

--- a/pom.xml
+++ b/pom.xml
@@ -218,5 +218,15 @@
         </pluginManagement>
       </build>
     </profile>
+    <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <properties>
+        <!-- coverall version 4.3.0 or previous version does not work on Java 9, see https://github.com/trautonen/coveralls-maven-plugin/issues/112 -->
+        <coveralls.skip>true</coveralls.skip>
+      </properties>
+    </profile>
   </profiles>
 </project>
