--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -193,6 +193,28 @@
       </dependency>
       <!-- == End Spring IO Platform == -->
 
+      <!-- == Begin Spring Framework == -->
+      <!-- == Upgrade Spring Framework from the Spring IO Platform as a security vulnerability update.(CVE-2017-8030) == -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-framework-bom</artifactId>
+        <version>${springframework.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- == End Spring Framework == -->
+
+      <!-- == Begin Spring Security == -->
+      <!-- == Upgrade Spring Security from the Spring IO Platform as a security vulnerability update.(CVE-2017-8030) == -->
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-bom</artifactId>
+        <version>${springframework.security.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- == End Spring Security == -->
+
       <!-- == Begin MyBatis == -->
       <dependency>
         <groupId>org.mybatis</groupId>
@@ -370,26 +392,6 @@
         <type>pom</type>
       </dependency>
       <!-- == End TERASOLUNA == -->
-
-      <!-- == Begin Spring Framework == -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-framework-bom</artifactId>
-        <version>${springframework.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <!-- == End Spring Framework == -->
-
-      <!-- == Begin Spring Security == -->
-      <dependency>
-        <groupId>org.springframework.security</groupId>
-        <artifactId>spring-security-bom</artifactId>
-        <version>${springframework.security.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <!-- == End Spring Security == -->
     </dependencies>
   </dependencyManagement>
   <properties>
@@ -413,6 +415,10 @@
     <terasoluna.gfw.version>5.4.1-SNAPSHOT</terasoluna.gfw.version>
     <!-- == Spring IO Platform == -->
     <io.spring.platform.version>Brussels-SR5</io.spring.platform.version>
+    <!-- == Spring Framework== -->
+    <springframework.version>4.3.14.RELEASE</springframework.version>
+    <!-- == Spring Security == -->
+    <springframework.security.version>4.2.4.RELEASE</springframework.security.version>
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.4.5</org.mybatis.version>
     <org.mybatis.spring.version>1.3.1</org.mybatis.spring.version>
@@ -434,10 +440,6 @@
     <cargo.container.id>tomcat8x</cargo.container.id>
     <cargo.container.url>http://archive.apache.org/dist/tomcat/tomcat-8/v${cargo.tomcat8.version}/bin/apache-tomcat-${cargo.tomcat8.version}.zip</cargo.container.url>
     <cargo.tomcat8.version>8.5.20</cargo.tomcat8.version>
-    <!-- == Spring Framework== -->
-    <springframework.version>4.3.14.RELEASE</springframework.version>
-    <!-- == Spring Security == -->
-    <springframework.security.version>4.2.4.RELEASE</springframework.security.version>
   </properties>
   <profiles>
     <profile>
