--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -193,6 +193,28 @@
       </dependency>
       <!-- == End Spring IO Platform == -->
 
+      <!-- == Begin Spring Framework == -->
+      <!-- == Upgrade Spring Framework from the Spring IO Platform as a security vulnerability update.(CVE-2017-8030) == -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-framework-bom</artifactId>
+        <version>${springframework.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- == End Spring Framework == -->
+
+      <!-- == Begin Spring Security == -->
+      <!-- == Upgrade Spring Security from the Spring IO Platform as a security vulnerability update.(CVE-2017-8030) == -->
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-bom</artifactId>
+        <version>${springframework.security.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- == End Spring Security == -->
+
       <!-- == Begin MyBatis == -->
       <dependency>
         <groupId>org.mybatis</groupId>
@@ -398,6 +420,12 @@
     <terasoluna.gfw.version>5.3.2-SNAPSHOT</terasoluna.gfw.version>
     <!-- == Spring IO Platform == -->
     <io.spring.platform.version>Athens-SR2</io.spring.platform.version>
+    <!-- == Spring Framework == -->
+    <!-- == Upgrade Spring Framework from the Spring IO Platform as a security vulnerability update.(CVE-2017-8030) == -->
+    <springframework.version>4.3.14.RELEASE</springframework.version>
+    <!-- == Spring Security == -->
+    <!-- == Upgrade Spring Security from the Spring IO Platform as a security vulnerability update.(CVE-2017-8030) == -->
+    <springframework.security.version>4.1.5.RELEASE</springframework.security.version>
     <!-- == MyBatis3 == -->
     <org.mybatis.version>3.4.2</org.mybatis.version>
     <org.mybatis.spring.version>1.3.1</org.mybatis.spring.version>
