--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>terasoluna-gfw-common-libraries</artifactId>
     <groupId>org.terasoluna.gfw</groupId>
-    <version>5.4.1-SNAPSHOT</version>
+    <version>5.4.1.RELEASE</version>
     <relativePath>../../terasoluna-gfw-common-libraries/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-codepoints</artifactId>
