--- a/terasoluna-gfw-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.4.1-SNAPSHOT</version>
+    <version>5.4.1.RELEASE</version>
     <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-dependencies</artifactId>
