Upgrade to dozer v6.2.0 #823

--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -45,12 +45,8 @@
 
     <!-- == Begin Dozer== -->
     <dependency>
-      <groupId>net.sf.dozer</groupId>
-      <artifactId>dozer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>net.sf.dozer</groupId>
-      <artifactId>dozer-spring</artifactId>
+      <groupId>com.github.dozermapper</groupId>
+      <artifactId>dozer-core</artifactId>
     </dependency>
     <!-- == End Dozer== -->
 
