--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -208,13 +208,8 @@
 
       <!-- == Begin Dozer== -->
       <dependency>
-        <groupId>net.sf.dozer</groupId>
-        <artifactId>dozer</artifactId>
-        <version>${dozer.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>net.sf.dozer</groupId>
-        <artifactId>dozer-spring</artifactId>
+        <groupId>com.github.dozermapper</groupId>
+        <artifactId>dozer-core</artifactId>
         <version>${dozer.version}</version>
       </dependency>
       <!-- == End Dozer== -->
@@ -397,7 +392,7 @@
     <org.mybatis.version>3.4.6</org.mybatis.version>
     <org.mybatis.spring.version>1.3.2</org.mybatis.spring.version>
     <!-- == Dozer== -->
-    <dozer.version>5.5.1</dozer.version>
+    <dozer.version>6.2.0</dozer.version>
     <!-- == Joda-Time == -->
     <joda-time.joda-time-jsptags.version>1.1.1</joda-time.joda-time-jsptags.version>
     <jadira-usertype-core.version>6.0.1.GA</jadira-usertype-core.version>
