add dozer-spring4 instead of removed dozer-spring #823

--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -48,6 +48,10 @@
       <groupId>com.github.dozermapper</groupId>
       <artifactId>dozer-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.dozermapper</groupId>
+      <artifactId>dozer-spring4</artifactId>
+    </dependency>
     <!-- == End Dozer== -->
 
     <!-- == Begin Joda-Time == -->
