[5.5.0.RC2] Upgrade to dozer v6.2.0 #823 (#824)
* Upgrade to dozer v6.2.0 #823

* add dozer-spring4 instead of removed dozer-spring #823

--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -45,12 +45,12 @@
 
     <!-- == Begin Dozer== -->
     <dependency>
-      <groupId>net.sf.dozer</groupId>
-      <artifactId>dozer</artifactId>
+      <groupId>com.github.dozermapper</groupId>
+      <artifactId>dozer-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>net.sf.dozer</groupId>
-      <artifactId>dozer-spring</artifactId>
+      <groupId>com.github.dozermapper</groupId>
+      <artifactId>dozer-spring4</artifactId>
     </dependency>
     <!-- == End Dozer== -->
 
