--- a/terasoluna-gfw-common-libraries/pom.xml
+++ b/terasoluna-gfw-common-libraries/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.5.0.RC2-SNAPSHOT</version>
+    <version>5.5.0-SNAPSHOT</version>
     <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
   </parent>
   <artifactId>terasoluna-gfw-common-libraries</artifactId>
