--- a/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
+++ b/terasoluna-gfw-dependencies/terasoluna-gfw-recommended-dependencies/pom.xml
@@ -47,6 +47,7 @@
     <dependency>
       <groupId>com.github.dozermapper</groupId>
       <artifactId>dozer-core</artifactId>
+      <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>com.github.dozermapper</groupId>
